# Eval_Metrics

./: .gitignore  pyproject.toml  readme.md  setup.cfg
.github/workflows/: test.yml
src/evaluation_metrics/: main.py  metrics.py
src/evaluation_metrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/evaluation_metrics/cython_modules/: iou_metric.cpp  iou_metric.pyx  setup.py
tests/: test_evaluation_metrics.py
tests/data/: output_data.json  output_data.pickle
